--- a/src/main/webapp/app/src/index.html
+++ b/src/main/webapp/app/src/index.html
@@ -43,14 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div class="navbar-brand">
-            ngbp
-            <small>
-              <a href="http://github.com/ngbp/ngbp/blob/v<%= version %>-release/CHANGELOG.md">
-                v<%= version %>
-              </a>
-            </small>
-          </div>
+          <div class="navbar-brand"><img src="assets/jpm-logo.png" width="52" height="32"/></div>
         </div>
         <div class="collapse navbar-collapse" collapse="menuCollapsed">
           <ul class="nav navbar-nav">
@@ -63,19 +56,13 @@
             <li>
               <a href ui-sref="accountSearch">
                 <i class="fa fa-book"></i>
-                Search Accounts
+                Proposal
               </a>
             </li>
             <li>
               <a href="https://github.com/ngbp/ngbp">
                 <i class="fa fa-github-alt"></i>
-                Github
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/ngbp/ngbp/issues">
-                <i class="fa fa-comments"></i>
-                Support
+                JPM Model Template
               </a>
             </li>
           </ul>
