Got Restful endpoints for Customer entity working

--- a/src/main/webapp/app/src/index.html
+++ b/src/main/webapp/app/src/index.html
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li ui-sref-active="active">
-              <a href="" ui-sref="proposal">
+              <a href="" ui-sref="manageProposal">
                 <i class="fa fa-newspaper-o"></i>
                 Proposal
               </a>
