--- a/src/main/webapp/app/src/index.html
+++ b/src/main/webapp/app/src/index.html
@@ -43,6 +43,12 @@
       .navbar-nav.navbar-right:last-child {
         margin-right: 0;
       }
+      .navbar-nav > li > a, .navbar-brand {
+        padding-top: 14px !important;
+        padding-bottom:0 !important;
+        height: 33px;
+      }
+      .navbar {min-height: 33px !important;}
     </style>
   </head>
   <body>
@@ -75,9 +81,9 @@
               </a>
             </li>
             <li ui-sref-active="active">
-              <a href="" ui-sref="manageProposal">
+              <a href="" ui-sref="manageProposalSession">
                 <i class="fa fa-newspaper-o"></i>
-                Proposal
+                Proposal Session
               </a>
             </li>
             <li ui-sref-active="active">
@@ -104,6 +110,7 @@
 
     <div class="container" ui-view="main"></div>
 
+<!--
     <footer class="footer">
       <div class="container">
         <div class="footer-inner">
@@ -130,5 +137,6 @@
         </div>
       </div>
     </footer>
+-->
   </body>
 </html>
